# solmap

./: .gitignore  README.md
backend/: package-lock.json  package.json
backend/src/: index.ts
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/world/: page.tsx
frontend/src/components/: ChaosBar.tsx  EventFeed.tsx  FactionPanel.tsx  SolanaProvider.tsx  WorldMap.tsx
frontend/src/hooks/: useWorldState.ts
frontend/src/lib/: constants.ts  types.ts
frontend/src/styles/: globals.css
programs/: Anchor.toml  Cargo.toml
programs/chaos_world/: Cargo.toml
programs/chaos_world/src/: errors.rs  lib.rs  state.rs
programs/chaos_world/src/instructions/: attack_territory.rs  create_faction.rs  init_world.rs  join_faction.rs  mod.rs  register_player.rs  trade.rs
