[package]
name = "chaos-world"
version = "0.1.0"
description = "Chaos World - A living blockchain world on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "chaos_world"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
